make my profile prettier

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <h1>Hello I'm Adam Dios👋🏻</h1>
         <img src="images/Adam_HeadShot.jpeg" alt="Image of Adam" class="image-circle" width="150px">
         <h2>About me</h2>
-          <p>I work in Digital.👨🏼‍💻 I am Hungarian🇭🇺 Currently in Amsterdam based in Dublin. I travel and I am tall. </p>
+          <p>I work in Digital.👨🏼‍💻 I am Hungarian🇭🇺 Currently in Amsterdam, based in Dublin. I travel and I am tall.🦒 </p>
         <a class="button-blue" href="https://www.linkedin.com/in/adamattiladios/">Add me on LinkedIn</a>
       </div>
 
